# data_msgs

./: CMakeLists.txt
msg/: CaptureStatus.msg  Gripper.msg
